# Modern-AI-Course

./: .gitignore  README.md  pyproject.toml  run
doc/: main.tex
docs/: main.tex
hw0/: hw0.ipynb
hw1/: hw1.ipynb
hw2/: hw2.ipynb
hw3/: hw3.ipynb
hw4/: hw4.ipynb
hw5/: hw5.ipynb
hw6/: hw6.ipynb
hw7/: hw7.ipynb
