[tool.poetry]
name = "modern-ai-course"
version = "0.1.0"
description = ""
authors = ["Joerg Neulist <carnegie-mellon@joerg.neulist.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.30.1"
jupyter = "^1.1.1"
pandas = "^2.3.2"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
