[tool.poetry]
name = "modern-ai-course"
version = "0.1.0"
description = ""
authors = ["Joerg Neulist <carnegie-mellon@joerg.neulist.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
ipykernel = "^6.30.1"
jupyter = "^1.1.1"
pytest = "^9.0.2"
torch = "^2.10.0"
numpy = "^2.4.2"
torchvision = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
